Handle JSON data in type-safe way, extract ObjectMapper (#7)